<resources>
    <string name="app_name">Resume-Arthur</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_me">I\'m a Native Android Developer from Nigeria. I create Android Apps, mostly using the Kotlin programming language. Passionate about learning, building and teaching tech. When I\'m not coding, I\'m either reading a novel, listening to music or watching a movie.</string>
    <string name="values_text">I can add a lot of value to your company as an android developer. I have over 5 years of experience in the field, and I\'m proficient in Java and Kotlin. I\'m also familiar with the Android SDK and Android Studio. I\'m confident that I can help your company create high-quality android apps that meet the needs of your customers.</string>
    <string name="profile_image_content_description">profile_image</string>
    <string name="switch_daynight_mode">Switch DayNight Mode</string>
    <string name="name_and_title">OKOLO ARTHUR \n Native Android Developer</string>
    <string name="skills_icon">skills_icon</string>
    <string name="about_me_header">About Me</string>
    <string name="skills">Skills</string>
    <string name="values_header">What Values Can I Add To The Company</string>
</resources>