<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".IntroFragment">

    <ImageButton
        android:id="@+id/night_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/switch_daynight_mode"
        android:src="@drawable/ic_mode_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/day_button"
        android:layout_width="45dp"
        android:visibility="invisible"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/switch_daynight_mode"
        android:src="@drawable/ic_light_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/profile_image_content_description"
        android:src="@drawable/profilecrop"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@id/profile_image"
        android:gravity="center_horizontal"
        android:text="@string/name_and_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/twitter"
        android:layout_width="50dp"
        android:scaleType="fitXY"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background"
        android:padding="@dimen/dp_10"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/linkedin"
        android:layout_width="50dp"
        android:scaleType="fitXY"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:padding="@dimen/dp_10"
        android:src="@drawable/linked_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="101dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="98dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="308dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="470dp" />
</androidx.constraintlayout.widget.ConstraintLayout>